# chaotic_paper

./: .gitignore  CMakeLists.txt  README.md
include/: GlyphPattern.h  ImageMaker.h  ImagePattern.h  WebPattern.h  config_reader.h  glyphs.h  makeColorSet.h
src/: GlyphPattern.cpp  ImageMaker.cpp  WebPattern.cpp  config.json  config_reader.cpp  glyphs.cpp  main.cpp  makeColorSet.cpp
